force-app/main/default/objects/BasiqEntityBigConnection__b/BasiqEntityBigConnection__b.object-meta.xml
<CustomObject>
    <label>Basiq Entity Big Connection</label>
    <pluralLabel>Basiq Entity Big Connections</pluralLabel>
</CustomObject>