force-app/main/default/objects/BasiqEntityBigConnection__b/fields/BasiqId__c.field-meta.xml
<CustomField>
    <fullName>BasiqId__c</fullName>
    <label>Basiq Id</label>
    <length>36</length>
    <required>true</required>
    <type>Text</type>
</CustomField>