force-app/main/default/objects/BasiqEntityBigConnection__b/fields/BasiqInstitutionId__c.field-meta.xml
<CustomField>
    <fullName>BasiqInstitutionId__c</fullName>
    <label>Basiq Institution Id</label>
    <length>36</length>
    <type>Text</type>
</CustomField>