force-app/main/default/objects/BasiqEntityBigConnection__b/fields/LastUpdated__c.field-meta.xml
<CustomField>
    <fullName>LastUpdated__c</fullName>
    <label>Last Updated</label>
    <length>255</length>
    <type>Text</type>
</CustomField>